# ChangeLog for app-misc/fdupes
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru> ChangeLog:
  repoman fix
