@@ -1,5 +1,5 @@
 AUX fdupes-1.50.2-external-md5sum-quotation.patch 314 RMD160 4b16cceb03dc0cff25116d627523784203f48019 SHA1 036fdffa4935cbd2606d2a2c69d9b492e5f7758e SHA256 84b891814cd77f647af911cd1290507dca1c5828ba6f6f1faddc296a42f0dba1
 DIST fdupes-1.50-PR2.tar.gz 19436 RMD160 052732ff4cf548910571b36391e0348b3ac805b5 SHA1 9aceff7bad8c899a279b89ba26656b29115a32bb SHA256 5af2c71206fece42e0f9554427e323bef96653a4dceb5130bc8ac63e2ceb1619
-EBUILD fdupes-1.50.2.ebuild 1088 RMD160 946c8b2c94e86f61adfabcc8a854b9a6fde5300f SHA1 da52e2548effaa9ff70223d10fa8a9ad894d221a SHA256 b850a27a3407623132b5b54cfc66b58a6aefb790bf83cc29f414a82134b8d1c8
-MISC ChangeLog 195 RMD160 37fd1b94666682590ebea38ff06085fc934e86a3 SHA1 7d6f7729f171da4f6da7af6affc979b01c236830 SHA256 facd15130d0fee42e3c623eb23a55b1952f8f692c70bc195802a761b7701cf21
+EBUILD fdupes-1.50.2.ebuild 1091 RMD160 5e66dd93063c7440a2637c4ab6842e2b13dd2e55 SHA1 58d6fef2a7f37d5aff820e355b38a89f1c358409 SHA256 f815f11c6970fce9d8653b037cb716edd2f601ed078047f1c842528badde5775
+MISC ChangeLog 294 RMD160 0383037f32196e09e2a752ac4eaabcbe5a6d7596 SHA1 6d2306a1757d82bf87cf9f9801520fce1c13502c SHA256 5190e8af89ce22e048f108c7f73829d7b8972f6b3a1f59b1a255cec14696b1a4
 MISC metadata.xml 406 RMD160 133ce347d799ac2bf09eff73b337c8b0fceae26f SHA1 3b69d233ecebae9621722471c92cca8e8bc230e4 SHA256 c83703a15ec4e22d4404dc22f9cdd43fa533f33b613afb3afee4d89bf74cdecb
