@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/fdupes
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  05 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru> fdupes-1.50.2.ebuild:
+  remove eutils eclass
 
   28 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru> ChangeLog:
   repoman fix
